new release 3.3.1, adds php5.6 management for stretch, fix many little bugs

--- a/apache2/php72-fpm.conf
+++ b/apache2/php72-fpm.conf
@@ -3,7 +3,8 @@
   DocumentRoot "%%document_root%%"
   AssignUserId #%%UID%% #%%GID%%
   SetEnv LOGIN "%%UID%%-%%LOGIN%%"
-    
+  SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
+  
   ProxyPassMatch "^/(.*\.php(/.*)?)$" "unix:/run/php/php7.2-%%LOGIN%%.sock|fcgi://localhost%%document_root%%"
 
   RewriteEngine on
