--- a/apache2/php70-fpm.conf
+++ b/apache2/php70-fpm.conf
@@ -3,6 +3,7 @@
   DocumentRoot "%%document_root%%"
   AssignUserId #%%UID%% #%%GID%%
   SetEnv LOGIN "%%UID%%-%%LOGIN%%"
+  SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     
   ProxyPassMatch "^/(.*\.php(/.*)?)$" "unix:/run/php/php7.0-%%LOGIN%%.sock|fcgi://localhost%%document_root%%"
 
