[fix] replacing ProxyPassMatch by SetHandler (prevents a bug in PATH_INFO management (eg in Nextcloud)

--- a/apache2/php71-fpm.conf
+++ b/apache2/php71-fpm.conf
@@ -5,7 +5,9 @@
   SetEnv LOGIN "%%UID%%-%%LOGIN%%"
   SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     
-  ProxyPassMatch "^/(.*\.php(/.*)?)$" "unix:/run/php/php7.1-%%LOGIN%%.sock|fcgi://localhost%%document_root%%"
+  <FilesMatch \.php$>
+        SetHandler "proxy:unix:/run/php/php7.1-%%LOGIN%%.sock|fcgi://localhost"
+  </FilesMatch>
 
   RewriteEngine on
   RewriteCond %{QUERY_STRING} (%2d|-)d.*auto_prepend  [NC]
