--- a/apache2/php72-fpm-https.conf
+++ b/apache2/php72-fpm-https.conf
@@ -1,12 +1,24 @@
-<VirtualHost *:80>
+<Virtualhost *:80>
+  ServerName %%fqdn%%
+  AssignUserId #%%UID%% #%%GID%%
+  SetEnv LOGIN "%%UID%%-%%LOGIN%%"
+
+  KeepAlive Off
+
+  RewriteEngine On
+  RewriteCond %{REQUEST_FILENAME} !/cgi-bin/
+  RewriteCond %{REQUEST_FILENAME} !/.well-known/acme-challenge/
+  RewriteRule ^/(.*)$ https://%%fqdn%%/$1 [R=301,L]
+</Virtualhost>
+<VirtualHost *:443>
   ServerName %%fqdn%%
   DocumentRoot "%%document_root%%"
   AssignUserId #%%UID%% #%%GID%%
   SetEnv LOGIN "%%UID%%-%%LOGIN%%"
   SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
-    
+  
   <FilesMatch \.php$>
-        SetHandler "proxy:unix:/run/php/php5.6-%%LOGIN%%.sock|fcgi://localhost"
+        SetHandler "proxy:unix:/run/php/php7.2-%%LOGIN%%.sock|fcgi://localhost"
   </FilesMatch>
 
   RewriteEngine on
@@ -20,5 +32,10 @@
     AllowOverride AuthConfig FileInfo Limit Options Indexes
     php_admin_flag engine off
   </Directory>
+
+  SSLEngine On
+  SSLCertificateFile %%CRT%%
+  SSLCertificateKeyFile %%KEY%%
+  %%CHAINLINE%%
 </VirtualHost>
 
