--- a/apache2/php72-fpm-both.conf
+++ b/apache2/php72-fpm-both.conf
@@ -17,7 +17,7 @@
     require all granted
     php_admin_value open_basedir "%%document_root%%:/usr/share/php/:/var/alternc/tmp:/tmp"
     Options +MultiViews -FollowSymLinks +SymLinksIfOwnerMatch
-    AllowOverride AuthConfig FileInfo Limit Options Indexes
+    AllowOverride AuthConfig FileInfo Limit Options Indexes Options=All,MultiViews
     php_admin_flag engine off
   </Directory>
 </VirtualHost>
@@ -40,7 +40,7 @@
     require all granted
     php_admin_value open_basedir "%%document_root%%:/usr/share/php/:/var/alternc/tmp:/tmp"
     Options +MultiViews -FollowSymLinks +SymLinksIfOwnerMatch
-    AllowOverride AuthConfig FileInfo Limit Options Indexes
+    AllowOverride AuthConfig FileInfo Limit Options Indexes Options=All,MultiViews
     php_admin_flag engine off
   </Directory>
 
