--- a/apache2/php73-fpm-https.conf
+++ b/apache2/php73-fpm-https.conf
@@ -29,7 +29,7 @@
     require all granted
     php_admin_value open_basedir "%%document_root%%:/usr/share/php/:/var/alternc/tmp:/tmp"
     Options +MultiViews -FollowSymLinks +SymLinksIfOwnerMatch
-    AllowOverride AuthConfig FileInfo Limit Options Indexes
+    AllowOverride AuthConfig FileInfo Limit Options Indexes Options=All,MultiViews
     php_admin_flag engine off
   </Directory>
 
