--- a/apache2/php74-fpm-https.conf
+++ b/apache2/php74-fpm-https.conf
@@ -1,4 +1,16 @@
-<VirtualHost *:80>
+<Virtualhost *:80>
+  ServerName %%fqdn%%
+  AssignUserId #%%UID%% #%%GID%%
+  SetEnv LOGIN "%%UID%%-%%LOGIN%%"
+
+  KeepAlive Off
+
+  RewriteEngine On
+  RewriteCond %{REQUEST_FILENAME} !/cgi-bin/
+  RewriteCond %{REQUEST_FILENAME} !/.well-known/acme-challenge/
+  RewriteRule ^/(.*)$ https://%%fqdn%%/$1 [R=301,L]
+</Virtualhost>
+<VirtualHost *:443>
   ServerName %%fqdn%%
   DocumentRoot "%%document_root%%"
   AssignUserId #%%UID%% #%%GID%%
@@ -17,8 +29,12 @@
     require all granted
     php_admin_value open_basedir "%%document_root%%:/usr/share/php/:/var/alternc/tmp:/tmp"
     Options +MultiViews -FollowSymLinks +SymLinksIfOwnerMatch
-    AllowOverride AuthConfig FileInfo Limit Options Indexes
+    AllowOverride AuthConfig FileInfo Limit Options Indexes Options=All,MultiViews
     php_admin_flag engine off
   </Directory>
-</VirtualHost>
 
+  SSLEngine On
+  SSLCertificateFile %%CRT%%
+  SSLCertificateKeyFile %%KEY%%
+  %%CHAINLINE%%
+</VirtualHost>
