--- a/apache2/php80-fpm-https.conf
+++ b/apache2/php80-fpm-https.conf
@@ -1,4 +1,22 @@
-<VirtualHost *:80>
+<Virtualhost *:80>
+  ServerName %%fqdn%%
+  AssignUserId #%%UID%% #%%GID%%
+  SetEnv LOGIN "%%UID%%-%%LOGIN%%"
+
+  KeepAlive Off
+
+  RewriteEngine On
+  RewriteCond %{REQUEST_FILENAME} !/cgi-bin/
+  RewriteCond %{REQUEST_FILENAME} !/.well-known/acme-challenge/
+  RewriteRule ^/(.*)$ http://%%fqdn%%/$1 [R=301,L]
+
+  SSLEngine On
+  SSLCertificateFile %%CRT%%
+  SSLCertificateKeyFile %%KEY%%
+  %%CHAINLINE%%
+
+</Virtualhost>
+<VirtualHost *:443>
   ServerName %%fqdn%%
   DocumentRoot "%%document_root%%"
   AssignUserId #%%UID%% #%%GID%%
@@ -20,5 +38,9 @@
     AllowOverride AuthConfig FileInfo Limit Options Indexes Options=All,MultiViews
     php_admin_flag engine off
   </Directory>
+  
+  SSLEngine On
+  SSLCertificateFile %%CRT%%
+  SSLCertificateKeyFile %%KEY%%
+  %%CHAINLINE%%
 </VirtualHost>
-
