--- a/apache2/php74-fpm.conf
+++ b/apache2/php74-fpm.conf
@@ -5,6 +5,11 @@
   SetEnv LOGIN "%%UID%%-%%LOGIN%%"
   SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     
+  # Deny all dot files expect .well-known
+  <Directory ~ "/\.(?!well-known\/)">
+    Require all denied
+  </Directory>
+
   <FilesMatch \.php$>
         SetHandler "proxy:unix:/run/php/php7.4-%%LOGIN%%.sock|fcgi://localhost"
   </FilesMatch>
