--- a/apache2/php81-fpm.conf
+++ b/apache2/php81-fpm.conf
@@ -4,7 +4,12 @@
   AssignUserId #%%UID%% #%%GID%%
   SetEnv LOGIN "%%UID%%-%%LOGIN%%"
   SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
-    
+
+  # Deny all dot files expect .well-known
+  <Directory ~ "/\.(?!well-known\/)">
+    Require all denied
+  </Directory>
+
   <FilesMatch \.php$>
         SetHandler "proxy:unix:/run/php/php8.1-%%LOGIN%%.sock|fcgi://localhost"
   </FilesMatch>
