--- a/apache2/php70-fpm.conf
+++ b/apache2/php70-fpm.conf
@@ -5,10 +5,27 @@
   SetEnv LOGIN "%%UID%%-%%LOGIN%%"
   SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
 
-  # Deny all dot files expect .well-known
-  <Directory ~ "/\.(?!well-known\/)">
-    Require all denied
-  </Directory>
+  # Custom extentions
+  <FilesMatch ^.*(log|sql|sqlite|bak|swp|php~)$>
+        Order allow,deny
+        Deny from all 
+  </FilesMatch>
+
+  # Common folders to deny
+  <DirectoryMatch .*\.(svn|git|ssh)/.*>
+        Order allow,deny
+        Deny from all 
+  </DirectoryMatch>
+
+  # Common files or folder names begin by
+  <FilesMatch .*\.(user.ini|php.ini|ssh|env|hg|gitignore|bashrc|bash_history|zsh_history|mysql_history|ht)$>
+        Order allow,deny
+        Deny from all 
+  </FilesMatch>
+  <FilesMatch (user.ini|php.ini)$>
+        Order allow,deny
+        Deny from all 
+  </FilesMatch>
 
   <FilesMatch \.php$>
         SetHandler "proxy:unix:/run/php/php7.0-%%LOGIN%%.sock|fcgi://localhost"
