--- a/src/etc/alternc/templates/3.3/apache2/php-fpm.conf
+++ b/src/etc/alternc/templates/3.3/apache2/php-fpm.conf
@@ -1,16 +1,4 @@
-<Virtualhost *:80>
-  ServerName %%fqdn%%
-  AssignUserId #%%UID%% #%%GID%%
-  SetEnv LOGIN "%%UID%%-%%LOGIN%%"
-
-  KeepAlive Off
-
-  RewriteEngine On
-  RewriteCond %{REQUEST_FILENAME} !/cgi-bin/
-  RewriteCond %{REQUEST_FILENAME} !/.well-known/acme-challenge/
-  RewriteRule ^/(.*)$ https://%%fqdn%%/$1 [R=301,L]
-</Virtualhost>
-<VirtualHost *:443>
+<VirtualHost *:80>
   ServerName %%fqdn%%
   DocumentRoot "%%document_root%%"
   AssignUserId #%%UID%% #%%GID%%
@@ -18,7 +6,7 @@
   SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     
   <FilesMatch \.php$>
-        SetHandler "proxy:unix:/run/php/php7.1-%%LOGIN%%.sock|fcgi://localhost"
+        SetHandler "proxy:unix:/run/php/php%%PHPVERSION%%-%%LOGIN%%.sock|fcgi://localhost"
   </FilesMatch>
 
   RewriteEngine on
@@ -29,13 +17,14 @@
     require all granted
     php_admin_value open_basedir "%%document_root%%:/usr/share/php/:/var/alternc/tmp:/tmp"
     Options +MultiViews -FollowSymLinks +SymLinksIfOwnerMatch
-    AllowOverride AuthConfig FileInfo Limit Options Indexes Options=All,MultiViews
+    AllowOverride AuthConfig FileInfo Limit Options Indexes
     php_admin_flag engine off
   </Directory>
 
-  SSLEngine On
-  SSLCertificateFile %%CRT%%
-  SSLCertificateKeyFile %%KEY%%
-  %%CHAINLINE%%
+# If you want to log the errors also in /var/log/alternc/sites/
+# WARNING: this WILL FORK a vlogger for EACH VHOST havingg this !!! the load on the machine may be high
+# on hosting with many vhosts. as a consequence, this is disabled by default
+# ErrorLog "|| /usr/sbin/vlogger -e -u alterncpanel -g alterncpanel -s error.log -t \"error-%Y%m%d.log\" /var/log/alternc/sites/%%UID%%-%%LOGIN%%/"
+
 </VirtualHost>
 
