--- a/src/etc/alternc/templates/3.5/apache2/php-fpm-both.conf
+++ b/src/etc/alternc/templates/3.5/apache2/php-fpm-both.conf
@@ -6,7 +6,7 @@
   SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     
   <FilesMatch \.php$>
-        SetHandler "proxy:unix:/run/php/php7.3-%%LOGIN%%.sock|fcgi://localhost"
+        SetHandler "proxy:unix:/run/php/php%%PHPVERSION%%-%%LOGIN%%.sock|fcgi://localhost"
   </FilesMatch>
 
   RewriteEngine on
@@ -29,7 +29,7 @@
   SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     
   <FilesMatch \.php$>
-        SetHandler "proxy:unix:/run/php/php7.3-%%LOGIN%%.sock|fcgi://localhost"
+        SetHandler "proxy:unix:/run/php/php%%PHPVERSION%%-%%LOGIN%%.sock|fcgi://localhost"
   </FilesMatch>
 
   RewriteEngine on
@@ -40,7 +40,7 @@
     require all granted
     php_admin_value open_basedir "%%document_root%%:/usr/share/php/:/var/alternc/tmp:/tmp"
     Options +MultiViews -FollowSymLinks +SymLinksIfOwnerMatch
-    AllowOverride AuthConfig FileInfo Limit Options Indexes Options=All,MultiViews
+    AllowOverride AuthConfig FileInfo Limit Options Indexes  Options=All,MultiViews
     php_admin_flag engine off
   </Directory>
 
