--- a/src/etc/alternc/templates/3.5/apache2/php-fpm-http.conf
+++ b/src/etc/alternc/templates/3.5/apache2/php-fpm-http.conf
@@ -1,16 +1,4 @@
-<Virtualhost *:80>
-  ServerName %%fqdn%%
-  AssignUserId #%%UID%% #%%GID%%
-  SetEnv LOGIN "%%UID%%-%%LOGIN%%"
-
-  KeepAlive Off
-
-  RewriteEngine On
-  RewriteCond %{REQUEST_FILENAME} !/cgi-bin/
-  RewriteCond %{REQUEST_FILENAME} !/.well-known/acme-challenge/
-  RewriteRule ^/(.*)$ https://%%fqdn%%/$1 [R=301,L]
-</Virtualhost>
-<VirtualHost *:443>
+<VirtualHost *:80>
   ServerName %%fqdn%%
   DocumentRoot "%%document_root%%"
   AssignUserId #%%UID%% #%%GID%%
@@ -18,7 +6,7 @@
   SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     
   <FilesMatch \.php$>
-        SetHandler "proxy:unix:/run/php/php7.4-%%LOGIN%%.sock|fcgi://localhost"
+        SetHandler "proxy:unix:/run/php/php%%PHPVERSION%%-%%LOGIN%%.sock|fcgi://localhost"
   </FilesMatch>
 
   RewriteEngine on
@@ -32,9 +20,22 @@
     AllowOverride AuthConfig FileInfo Limit Options Indexes Options=All,MultiViews
     php_admin_flag engine off
   </Directory>
+</VirtualHost>
+<Virtualhost *:443>
+  ServerName %%fqdn%%
+  AssignUserId #%%UID%% #%%GID%%
+  SetEnv LOGIN "%%UID%%-%%LOGIN%%"
+
+  KeepAlive Off
+
+  RewriteEngine On
+  RewriteCond %{REQUEST_FILENAME} !/cgi-bin/
+  RewriteCond %{REQUEST_FILENAME} !/.well-known/acme-challenge/
+  RewriteRule ^/(.*)$ http://%%fqdn%%/$1 [R=301,L]
 
   SSLEngine On
   SSLCertificateFile %%CRT%%
   SSLCertificateKeyFile %%KEY%%
   %%CHAINLINE%%
-</VirtualHost>
+
+</Virtualhost>
