--- a/src/etc/alternc/templates/3.5/apache2/php-fpm-https.conf
+++ b/src/etc/alternc/templates/3.5/apache2/php-fpm-https.conf
@@ -19,7 +19,7 @@
   SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     
   <FilesMatch \.php$>
-        SetHandler "proxy:unix:/run/php/php5.6-%%LOGIN%%.sock|fcgi://localhost"
+        SetHandler "proxy:unix:/run/php/php%%PHPVERSION%%-%%LOGIN%%.sock|fcgi://localhost"
   </FilesMatch>
 
   RewriteEngine on
