Set ErrorLog also on 3.5 context
* We have forgot some ErrorLog behavior in default templates

--- a/src/etc/alternc/templates/3.5/apache2/php-fpm-http.conf
+++ b/src/etc/alternc/templates/3.5/apache2/php-fpm-http.conf
@@ -20,6 +20,11 @@
     AllowOverride AuthConfig FileInfo Limit Options Indexes Options=All,MultiViews
     php_admin_flag engine off
   </Directory>
+
+  # If you want to log the errors also in /var/log/alternc/sites/
+  # WARNING: this WILL FORK a vlogger for EACH VHOST havingg this !!! the load on the machine may be high
+  # on hosting with many vhosts. as a consequence, this is disabled by default
+  # ErrorLog "|| /usr/sbin/vlogger -e -u alterncpanel -g alterncpanel -s error.log -t \"error-%Y%m%d.log\" /var/log/alternc/sites/%%UID%%-%%LOGIN%%/"
 </VirtualHost>
 <Virtualhost *:443>
   ServerName %%fqdn%%
@@ -38,4 +43,8 @@
   SSLCertificateKeyFile %%KEY%%
   %%CHAINLINE%%
 
+  # If you want to log the errors also in /var/log/alternc/sites/
+  # WARNING: this WILL FORK a vlogger for EACH VHOST havingg this !!! the load on the machine may be high
+  # on hosting with many vhosts. as a consequence, this is disabled by default
+  # ErrorLog "|| /usr/sbin/vlogger -e -u alterncpanel -g alterncpanel -s error.log -t \"error-%Y%m%d.log\" /var/log/alternc/sites/%%UID%%-%%LOGIN%%/"
 </Virtualhost>
