--- a/src/etc/alternc/templates/3.5/apache2/php-fpm-https.conf
+++ b/src/etc/alternc/templates/3.5/apache2/php-fpm-https.conf
@@ -10,6 +10,10 @@
   RewriteCond %{REQUEST_FILENAME} !/.well-known/acme-challenge/
   RewriteRule ^/(.*)$ https://%%fqdn%%/$1 [R=301,L]
 
+  # If you want to log the errors also in /var/log/alternc/sites/
+  # WARNING: this WILL FORK a vlogger for EACH VHOST havingg this !!! the load on the machine may be high
+  # on hosting with many vhosts. as a consequence, this is disabled by default
+  # ErrorLog "|| /usr/sbin/vlogger -e -u alterncpanel -g alterncpanel -s error.log -t \"error-%Y%m%d.log\" /var/log/alternc/sites/%%UID%%-%%LOGIN%%/"
 </Virtualhost>
 <VirtualHost *:443>
   ServerName %%fqdn%%
@@ -38,5 +42,10 @@
   SSLCertificateFile %%CRT%%
   SSLCertificateKeyFile %%KEY%%
   %%CHAINLINE%%
+
+  # If you want to log the errors also in /var/log/alternc/sites/
+  # WARNING: this WILL FORK a vlogger for EACH VHOST havingg this !!! the load on the machine may be high
+  # on hosting with many vhosts. as a consequence, this is disabled by default
+  # ErrorLog "|| /usr/sbin/vlogger -e -u alterncpanel -g alterncpanel -s error.log -t \"error-%Y%m%d.log\" /var/log/alternc/sites/%%UID%%-%%LOGIN%%/"
 </VirtualHost>
 
