--- a/src/etc/alternc/templates/3.5/apache2/php-fpm-both.conf
+++ b/src/etc/alternc/templates/3.5/apache2/php-fpm-both.conf
@@ -20,6 +20,11 @@
     AllowOverride AuthConfig FileInfo Limit Options Indexes Options=All,MultiViews
     php_admin_flag engine off
   </Directory>
+
+  # If you want to log the errors also in /var/log/alternc/sites/
+  # WARNING: this WILL FORK a vlogger for EACH VHOST having this !!! the load on the machine may be high
+  # when having many vhosts. as a consequence, this is disabled by default
+  #ErrorLog "|| /usr/sbin/vlogger -e -u alterncpanel -g alterncpanel -s error.log -t \"error-%Y%m%d.log\" /var/log/alternc/sites/%%UID%%-%%LOGIN%%/"
 </VirtualHost>
 <VirtualHost *:443>
   ServerName %%fqdn%%
@@ -48,4 +53,9 @@
   SSLCertificateFile %%CRT%%
   SSLCertificateKeyFile %%KEY%%
   %%CHAINLINE%%
+
+  # If you want to log the errors also in /var/log/alternc/sites/
+  # WARNING: this WILL FORK a vlogger for EACH VHOST having this !!! the load on the machine may be high
+  # when having many vhosts. as a consequence, this is disabled by default
+  #ErrorLog "|| /usr/sbin/vlogger -e -u alterncpanel -g alterncpanel -s error.log -t \"error-%Y%m%d.log\" /var/log/alternc/sites/%%UID%%-%%LOGIN%%/"
 </VirtualHost>
