--- a/src/etc/alternc/templates/3.5/apache2/php-fpm-both.conf
+++ b/src/etc/alternc/templates/3.5/apache2/php-fpm-both.conf
@@ -26,6 +26,7 @@
   # when having many vhosts. as a consequence, this is disabled by default
   #ErrorLog "|| /usr/sbin/vlogger -e -u alterncpanel -g alterncpanel -s error.log -t \"error-%Y%m%d.log\" /var/log/alternc/sites/%%UID%%-%%LOGIN%%/"
 </VirtualHost>
+<IfModule mod_ssl.c>
 <VirtualHost *:443>
   ServerName %%fqdn%%
   DocumentRoot "%%document_root%%"
@@ -59,3 +60,4 @@
   # when having many vhosts. as a consequence, this is disabled by default
   #ErrorLog "|| /usr/sbin/vlogger -e -u alterncpanel -g alterncpanel -s error.log -t \"error-%Y%m%d.log\" /var/log/alternc/sites/%%UID%%-%%LOGIN%%/"
 </VirtualHost>
+</IfModule>
