--- a/src/etc/alternc/templates/3.5/apache2/php-fpm-http.conf
+++ b/src/etc/alternc/templates/3.5/apache2/php-fpm-http.conf
@@ -26,6 +26,7 @@
   # on hosting with many vhosts. as a consequence, this is disabled by default
   # ErrorLog "|| /usr/sbin/vlogger -e -u alterncpanel -g alterncpanel -s error.log -t \"error-%Y%m%d.log\" /var/log/alternc/sites/%%UID%%-%%LOGIN%%/"
 </VirtualHost>
+<IfModule mod_ssl.c>
 <Virtualhost *:443>
   ServerName %%fqdn%%
   AssignUserId #%%UID%% #%%GID%%
@@ -48,3 +49,4 @@
   # on hosting with many vhosts. as a consequence, this is disabled by default
   # ErrorLog "|| /usr/sbin/vlogger -e -u alterncpanel -g alterncpanel -s error.log -t \"error-%Y%m%d.log\" /var/log/alternc/sites/%%UID%%-%%LOGIN%%/"
 </Virtualhost>
+</IfModule>
