--- a/src/etc/alternc/templates/3.5/apache2/php-fpm-https.conf
+++ b/src/etc/alternc/templates/3.5/apache2/php-fpm-https.conf
@@ -15,6 +15,7 @@
   # on hosting with many vhosts. as a consequence, this is disabled by default
   # ErrorLog "|| /usr/sbin/vlogger -e -u alterncpanel -g alterncpanel -s error.log -t \"error-%Y%m%d.log\" /var/log/alternc/sites/%%UID%%-%%LOGIN%%/"
 </Virtualhost>
+<IfModule mod_ssl.c>
 <VirtualHost *:443>
   ServerName %%fqdn%%
   DocumentRoot "%%document_root%%"
@@ -48,4 +49,4 @@
   # on hosting with many vhosts. as a consequence, this is disabled by default
   # ErrorLog "|| /usr/sbin/vlogger -e -u alterncpanel -g alterncpanel -s error.log -t \"error-%Y%m%d.log\" /var/log/alternc/sites/%%UID%%-%%LOGIN%%/"
 </VirtualHost>
-
+</IfModule>
