Remove some useless debian packaging files
* debhelper and some others files are used only on building process
* is not required to save them

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 debian/.debhelper/
-debian/debhelper-build-stamp/
+debian/*.debhelper
+debian/debhelper-build-stamp
 debian/files
-debian/alternc-php-fpm.debhelper.log
-debian/alternc-php-fpm.substvars
-debian/alternc-php-fpm/
+debian/*.log
+debian/*.substvars
+debian/*/
+
+*.swp
 *.gpg
