--- a/src/etc/alternc/templates/3.5/apache2/php-fpm-https.conf
+++ b/src/etc/alternc/templates/3.5/apache2/php-fpm-https.conf
@@ -1,14 +1,33 @@
 <Virtualhost *:80>
   ServerName %%fqdn%%
+  DocumentRoot "%%document_root%%"
   AssignUserId #%%UID%% #%%GID%%
   SetEnv LOGIN "%%UID%%-%%LOGIN%%"
+  SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
 
   KeepAlive Off
 
   RewriteEngine On
   RewriteCond %{REQUEST_FILENAME} !/cgi-bin/
   RewriteCond %{REQUEST_FILENAME} !/.well-known/acme-challenge/
+  RewriteCond %{HTTP:X-Forwarded-Proto} !https
   RewriteRule ^/(.*)$ https://%%fqdn%%/$1 [R=301,L]
+
+  <FilesMatch \.php$>
+        SetHandler "proxy:unix:/run/php/php%%PHPVERSION%%-%%LOGIN%%.sock|fcgi://localhost"
+  </FilesMatch>
+
+  RewriteEngine on
+  RewriteCond %{QUERY_STRING} (%2d|-)d.*auto_prepend  [NC]
+  RewriteRule .? - [F,L]
+
+  <Directory "%%document_root%%">
+    require all granted
+    php_admin_value open_basedir "%%document_root%%:/usr/share/php/:/var/alternc/tmp:/tmp"
+    Options +MultiViews -FollowSymLinks +SymLinksIfOwnerMatch
+    AllowOverride AuthConfig FileInfo Limit Options Indexes Options=All,MultiViews
+    php_admin_flag engine off
+  </Directory>
 
   # If you want to log the errors also in /var/log/alternc/sites/
   # WARNING: this WILL FORK a vlogger for EACH VHOST havingg this !!! the load on the machine may be high
